--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,6 @@ edition = "2018"
 futures = "*"
 serde = "*"
 serde_json = "*"
-actix-web = "*"
+actix-web = "^4.0.0-beta.5"
 tokio = "*"
 async-trait = "0.1.48"
