--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,7 @@ serde_json = "*"
 actix-web = "^4.0.0-beta.5"
 tokio = "*"
 async-trait = "0.1.48"
+
+[[example]]
+name = "checker"
+path = "examples/examplechecker/src/main.rs"
