--- a/examples/examplechecker/Cargo.toml
+++ b/examples/examplechecker/Cargo.toml
@@ -10,3 +10,5 @@ edition = "2018"
 enochecker = {path="../../"}
 async-trait = "*"
 actix-web = "^4.0.0-beta.5"
+serde = "*"
+mongodb = "^2.0.0-alpha.1"
